@@ -1,3 +1,5 @@
+- Refactor: Invocation of method factory for Registration creation
+
 6.0.1 (17-10-2019)
 - Improvement: adding validations to the EECC table generation.
 
